--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,3 +1,6 @@
+analyzer:
+  errors:
+    lines_longer_than_80_chars: ignore
 include: package:very_good_analysis/analysis_options.yaml
 
 linter:
@@ -6,6 +9,5 @@ linter:
     library_private_types_in_public_api: false
     avoid_setters_without_getters: false
     avoid_positional_boolean_parameters: false
-
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
