--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
     sdk: flutter
   flutter_svg:
   gsettings: ">=0.2.7 <1.0.0"
-  libadwaita_core: ">=0.5.4 <2.0.0"
+  libadwaita_core:
   package_info_plus: ">=4.0.0 <5.0.0"
   popover_gtk: ">=0.2.6+3 <1.0.0"
   url_launcher: ">=6.1.11 <7.0.0"
